[package]
name = "bevy_jfa"
description = "The jump flooding algorithm (JFA) for Bevy"
keywords = ["bevy", "jfa", "outline", "graphics"]
categories = ["game-development", "graphics"]
authors = ["dataphract"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_jfa"
repository = "https://github.com/dataphract/bevy_jfa"
readme = "README.md"

version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["wgpu-profiler"]

[dependencies]
bitflags = "1"
wgpu-profiler = { version = "0.9", optional = true }

[dependencies.bevy]
version = "0.9.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
]

[profile.dev]
opt-level = 3
