[package]
authors = ["dataphract"]
categories = ["game-development", "graphics"]
description = "The jump flooding algorithm (JFA) for Bevy"
documentation = "https://docs.rs/bevy_jfa"
keywords = ["bevy", "jfa", "outline", "graphics"]
license = "MIT OR Apache-2.0"
name = "bevy_jfa"
readme = "README.md"
repository = "https://github.com/dataphract/bevy_jfa"

edition = "2021"
resolver = "2"
version = "0.1.0"

[features]
default = ["wgpu-profiler"]

[dependencies]
bitflags = "2.3.1"
wgpu-profiler = {version = "0.12.1", optional = true}

[dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
]
version = "0.10.1"

[profile.dev]
opt-level = 3
